--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     
     <title>{{titulo}}</title>
     
-<!--Bootstrap por descarga de archiivos compilados-->
+<!--Bootstrap por descarga de archivos compilados-->
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/css/estilos.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,28 +19,34 @@
 
 {{> header}}     <!-- llamando al mustacho--> 
 
-<br><br>
+<div class="texto11">Here you'll find notes, explanations, mock exams, books and much more to help you navegate the seas of IB school without drowning. Everything's ordered by subject, topic or teachers. Take a look, make questions and if you want, youcan share content with us. </div>
+
+{{!-- <div>
+<svg class="texto1"  viewBox="0 0 188 43" xmlns="http://www.w3.org/2000/svg"><text xml:space="preserve" style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.64444px;line-height:1.25;font-family:Aclonica;-inkscape-font-specification:Aclonica;text-align:center;letter-spacing:0;word-spacing:0;text-anchor:middle;fill:#000;fill-opacity:1;stroke:none;stroke-width:.264583" x="94.091" y="10.755"><tspan style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.64444px;font-family:Aclonica;-inkscape-font-specification:Aclonica;text-align:center;text-anchor:middle;stroke-width:.264583" x="94.091" y="10.755">Here you&apos;ll find notes, explanations, mock exams, books</tspan><tspan style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.64444px;font-family:Aclonica;-inkscape-font-specification:Aclonica;text-align:center;text-anchor:middle;stroke-width:.264583" x="94.091" y="17.811"> and much more to help you navegate the seas of IB school </tspan><tspan style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.64444px;font-family:Aclonica;-inkscape-font-specification:Aclonica;text-align:center;text-anchor:middle;stroke-width:.264583" x="94.091" y="24.867">without drowning. Everything&apos;s ordered by subject, topic or </tspan><tspan style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.64444px;font-family:Aclonica;-inkscape-font-specification:Aclonica;text-align:center;text-anchor:middle;stroke-width:.264583" x="94.091" y="31.922">teachers. Take a look, make questions and if you want, you</tspan><tspan style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.64444px;font-family:Aclonica;-inkscape-font-specification:Aclonica;text-align:center;text-anchor:middle;stroke-width:.264583" x="94.091" y="38.978">can share content with us.</tspan></text></svg>
+</div> --}}
+
+<svg class="welcome" width="100%" viewBox="0 0 261 65" xmlns="http://www.w3.org/2000/svg">
+<text class="welcome delay5" xml:space="preserve" style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-size:5.7528px;line-height:1.25;font-family:'Henny Penny';-inkscape-font-specification:'Henny Penny';letter-spacing:0;word-spacing:0;fill:#000;fill-opacity:1;stroke:none;stroke-width:.143821" x="38.887" y="35.348">
+  <tspan class="welcome letras" style="font-style:normal;font-variant:normal;font-weight:400;font-stretch:normal;font-family:'Henny Penny';-inkscape-font-specification:'Henny Penny';stroke-width:.143821" x="38.887" y="35.348">WELCOME TO THE (NOT SO WIDE) WORLD OF THE BICHOWIKI</tspan></text>
+  <rect class="welcome delay1" style="fill:none;fill-opacity:1;stroke:#ff6c00;stroke-width:.656301;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1;paint-order:markers stroke fill" width="188.821" height="13.965" x="36.354" y="26.66" ry="1.648"/>
+  <rect class="welcome delay2" style="fill:none;fill-opacity:1;stroke:#ff6c00;stroke-width:.660606;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1;paint-order:markers stroke fill" width="191.365" height="13.961" x="35.022" y="26.662" ry="1.648"/>
+  <rect class="welcome delay3" style="fill:none;fill-opacity:1;stroke:#ff6c00;stroke-width:.705486;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1;paint-order:markers stroke fill" width="186.143" height="16.369" x="37.712" y="25.552" ry="1.932"/>
+  <rect class="welcome delay4" style="fill:none;fill-opacity:1;stroke:#ff6c00;stroke-width:.759311;stroke-linecap:round;stroke-linejoin:round;stroke-opacity:1;paint-order:markers stroke fill" width="186.089" height="18.967" x="37.739" y="24.387" ry="2.239"/></svg>
+</div>
 
  <div class="d-grid gap-2 col-6 mx-auto">
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="¿que buscas?..." aria-label="Search">
-          <button class="btn btn-outline-secondary" type="submit">buscar</button>
+          <input class="form-control me-2" type="search" placeholder="whatcha looking for?..." aria-label="Search">
+          <button class="btn btn-outline-secondary" type="submit">search</button>
         </form>
       </div>
     </nav>
-      <button class="btn btn-secondary" type="button">SUBIR CONTENIDO</button>   
+      <button class="btn btn-secondary" type="button">CONTRIBUTE TO OUR LIBRARY</button>   
   </div> 
 
-  <div class="clearfix"><h3 class="texto">
-    Acá vas a encontrar apuntes, explicaciones, exámenes, tareas, libros, ayuda y mucho más. Todo ordenado por materia, tema o profes. 
-    Entren, busquen, pregunten, agregen y compartan contenido y vayan afuera a jugar que pa' eso son niñes!
-  </h3>
-  
-</div>
-
-<div class="container">materias</div>
+<div class="container">Subjets</div>
 
 <div class="row">
 <a class="btn btn-ligth" href="mates" role="button">Matemática</a>
@@ -60,12 +66,11 @@
 </div>
 
 
-
-<div class="cr">Cuenta Regresiva para los Finales! </div>
+<div class="cr">Countdown to Finals! </div>
 <div id="cuenta"></div><br>
 
 <footer class="footer">
-    <div><h4>Algunas páginas que te pueden servir... </h4></div>
+    <div><h4>Some pages that migth be usefull... </h4></div>
       <div class="botonesfooter">
         <div class="colum"></div>
 
