--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,118 @@
 <header class="header">
-      <div class="labichopedia">LaBichoPedia</div>
-</header>
+<svg width="100%" height="100%" viewBox="0 0 1000 288" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <linearGradient id="d">
+      <stop style="stop-color:#ff2929;stop-opacity:.80000001" offset="0"/>
+      <stop style="stop-color:#ffcc29;stop-opacity:1" offset="1"/>
+    </linearGradient>
+    <linearGradient id="c">
+      <stop style="stop-color:#ff2929;stop-opacity:.80000001" offset="0"/>
+      <stop style="stop-color:#ffc929;stop-opacity:1" offset="1"/>
+    </linearGradient>
+    <linearGradient id="b">
+      <stop style="stop-color:#ff2929;stop-opacity:.80000001" offset="0"/>
+      <stop style="stop-color:#ffcc29;stop-opacity:1" offset="1"/>
+    </linearGradient>
+    <linearGradient id="a">
+      <stop style="stop-color:#f55;stop-opacity:1" offset="0"/>
+      <stop style="stop-color:#fd5;stop-opacity:1" offset="1"/>
+    </linearGradient>
+    <linearGradient xlink:href="#a" id="e" x1="239.3" y1="194.2" x2="29.5" y2="185.5" gradientUnits="userSpaceOnUse" gradientTransform="translate(253 -210.2) scale(1.7806)"/>
+    <linearGradient xlink:href="#b" id="f" x1="75.5" y1="28.7" x2="97.2" y2="28.7" gradientUnits="userSpaceOnUse" gradientTransform="translate(.7 7.1) scale(1.37769)"/>
+    <linearGradient xlink:href="#b" id="g" gradientUnits="userSpaceOnUse" gradientTransform="translate(66.4 34.5) scale(.91845)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="h" gradientUnits="userSpaceOnUse" gradientTransform="translate(73.6 60.5) scale(.68884)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="i" gradientUnits="userSpaceOnUse" gradientTransform="translate(73.1 59.2) scale(.45922)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="n" gradientUnits="userSpaceOnUse" gradientTransform="translate(207.2 160.3) scale(1.37768)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="o" gradientUnits="userSpaceOnUse" gradientTransform="translate(287.3 199) scale(.73476)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="p" gradientUnits="userSpaceOnUse" gradientTransform="translate(288.9 215.7) scale(.45923)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="u" gradientUnits="userSpaceOnUse" gradientTransform="translate(829.2 -6.7) scale(1.37768)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="w" gradientUnits="userSpaceOnUse" gradientTransform="translate(944.6 138.7) scale(.22962)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="x" gradientUnits="userSpaceOnUse" gradientTransform="translate(931.8 119.6) scale(.45923)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="y" gradientUnits="userSpaceOnUse" gradientTransform="translate(901.5 57.4) scale(.91845)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="z" gradientUnits="userSpaceOnUse" gradientTransform="translate(871.8 22.5) scale(1.14808)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#c" id="A" gradientUnits="userSpaceOnUse" gradientTransform="translate(918.7 93.1) scale(.68886)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="v" gradientUnits="userSpaceOnUse" gradientTransform="translate(771.2 -19.9) scale(1.60729)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="B" gradientUnits="userSpaceOnUse" gradientTransform="translate(-62.2 -293.6) scale(1.37768)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#d" id="C" gradientUnits="userSpaceOnUse" gradientTransform="translate(-43.8 -306.8) scale(1.60729)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="D" gradientUnits="userSpaceOnUse" gradientTransform="translate(20.7 -148.2) scale(.22962)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="E" gradientUnits="userSpaceOnUse" gradientTransform="translate(-6.2 -167.3) scale(.45923)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="F" gradientUnits="userSpaceOnUse" gradientTransform="translate(-55.1 -229.5) scale(.91845)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="G" gradientUnits="userSpaceOnUse" gradientTransform="translate(-65.1 -264.4) scale(1.14808)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#c" id="H" gradientUnits="userSpaceOnUse" gradientTransform="translate(-32.7 -193.8) scale(.68886)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="q" gradientUnits="userSpaceOnUse" gradientTransform="translate(586 13.4) scale(1.37768)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="r" gradientUnits="userSpaceOnUse" gradientTransform="translate(666 52) scale(.73476)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="s" gradientUnits="userSpaceOnUse" gradientTransform="translate(667.6 68.7) scale(.45923)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="j" gradientUnits="userSpaceOnUse" gradientTransform="translate(753.7 128.6) scale(1.37769)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="k" gradientUnits="userSpaceOnUse" gradientTransform="translate(767.3 156) scale(.91845)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="l" gradientUnits="userSpaceOnUse" gradientTransform="translate(799.7 182) scale(.68884)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="m" gradientUnits="userSpaceOnUse" gradientTransform="translate(840 182.2) scale(.45922)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+    <linearGradient xlink:href="#b" id="t" gradientUnits="userSpaceOnUse" gradientTransform="translate(692.5 82.3) scale(.36738)" x1="75.5" y1="28.7" x2="97.2" y2="28.7"/>
+  </defs>
+  <g style="fill:#fff">
+    <path d="m18.9 215.4 7.6-46.5 215.8-21.2 2.6 99.1z" style="fill:#fff;fill-opacity:1;stroke:none;stroke-width:.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" transform="translate(253 -210.2) scale(1.7806)"/>
+    <path d="m18.9 215.4 7.6-46.5 215.8-21.2 2.6 99.1z" style="fill:#fff;fill-opacity:1;stroke:none;stroke-width:.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" transform="translate(253 -210.2) scale(1.7806)"/>
+  </g>
+  <path style="fill:none;stroke:#000;stroke-width:3.486;stroke-linecap:round;stroke-dasharray:none;stroke-opacity:1;paint-order:markers stroke fill" d="M314.3 56.9 700.5 98l28.4 113-376.4-16.4Z"/>
+  <path class="cuadrowiki" d="m286.7 173.3 13.5-82.8 384.3-37.7 4.7 176.5z" style="fill:url(#e);fill-opacity:1;stroke:none;stroke-width:.471116px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"/>
+  <path style="fill:none;stroke:#000;stroke-width:3.46781;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" d="m315.3 112.6-17.5-69.8 86.3 10"/>
+  <path style="fill:none;stroke:#000;stroke-width:3.468;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" d="m722.8 144.4 20.2 79.5-51.6-3.2"/>
+  <path style="fill:none;stroke:#000;stroke-width:3.486;stroke-linecap:butt;stroke-linejoin:miter;stroke-dasharray:none;stroke-opacity:1" d="m322.4 86.3 28 100.4"/>
+ 
+  <g class="grupo1">
+  <circle class="burbuja1" style="fill:url(#f);stroke:none;stroke-width:4.68136;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="119.6" cy="46.7" r="15"/>
+  <circle class="burbuja2" style="fill:url(#g);stroke:none;stroke-width:3.12089;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="145.7" cy="60.9" r="10"/>
+  <circle class="burbuja3" style="fill:url(#h);stroke:none;stroke-width:2.34067;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="133.1" cy="80.3" r="7.5"/>
+  <circle class="burbuja4" style="fill:url(#i);stroke:none;stroke-width:1.56044;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="112.8" cy="72.3" r="5"/>
+  </g>
+  <g class="grupo2">
+  <circle class="burbuja5" style="fill:url(#j);stroke:none;stroke-width:4.68136;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="872.7" cy="168.2" r="15"/>
+  <circle class="burbuja6" style="fill:url(#k);stroke:none;stroke-width:3.12089;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="846.6" cy="182.4" r="10"/>
+  <circle class="burbuja7" style="fill:url(#l);stroke:none;stroke-width:2.34067;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="859.2" cy="201.8" r="7.5"/>
+  <circle class="burbuja8" style="fill:url(#m);stroke:none;stroke-width:1.56044;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="879.6" cy="195.4" r="5"/>
+  </g>
+  <g class="grupo2">
+  <circle class="burbuja5" style="fill:url(#n);stroke:none;stroke-width:4.68137;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="326.2" cy="199.9" r="15"/>
+  <circle class="burbuja6" style="fill:url(#o);stroke:none;stroke-width:2.4967;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="350.8" cy="220" r="8"/>
+  <circle class="burbuja7" style="fill:url(#p);stroke:none;stroke-width:1.56045;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="328.5" cy="228.9" r="5"/>
+   </g>
+   <g class="grupo1">
+  <circle class="burbuja1" style="fill:url(#q);stroke:none;stroke-width:4.68137;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="704.9" cy="52.9" r="15"/>
+  <circle class="burbuja2" style="fill:url(#r);stroke:none;stroke-width:2.4967;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="729.5" cy="73.1" r="8"/>
+  <circle class="burbuja3" style="fill:url(#s);stroke:none;stroke-width:1.56045;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="707.3" cy="81.9" r="5"/>
+  <circle class="burbuja4" style="fill:url(#t);stroke:none;stroke-width:1.24836;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="724.2" cy="92.9" r="4"/>
+  </g>
+  <g class="grupo3" transform="translate(-5.3 1.6)">
+    <circle class="burbuja9" style="fill:url(#u);stroke:none;stroke-width:4.68131;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="948.1" cy="32.9" r="15"/>
+    <circle class="burbuja10" style="fill:url(#v);stroke:none;stroke-width:5.46153;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="910" cy="26.3" r="17.5"/>
+    <circle class="burbuja11" style="fill:url(#w);stroke:none;stroke-width:.780219;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="964.4" cy="145.3" r="2.5"/>
+    <circle class="burbuja12" style="fill:url(#x);stroke:none;stroke-width:1.56044;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="971.5" cy="132.8" r="5"/>
+    <circle class="burbuja13" style="fill:url(#y);stroke:none;stroke-width:3.12088;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="980.8" cy="83.8" r="10"/>
+    <circle class="burbuja14" style="fill:url(#z);stroke:none;stroke-width:3.90108;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="970.9" cy="55.5" r="12.5"/>
+    <circle class="burbuja15" style="fill:url(#A);stroke:none;stroke-width:2.34067;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="978.2" cy="112.9" r="7.5"/>
+  </g>
+  <g class="grupo4" transform="matrix(1 0 0 -1 4.8 -2.6)">
+    <circle class="burbuja9" style="fill:url(#B);stroke:none;stroke-width:4.68131;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="56.8" cy="-254" r="15"/>
+    <circle class="burbuja10" style="fill:url(#C);stroke:none;stroke-width:5.46153;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="94.9" cy="-260.6" r="17.5"/>
+    <circle class="burbuja11" style="fill:url(#D);stroke:none;stroke-width:.780219;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="40.5" cy="-141.6" r="2.5"/>
+    <circle class="burbuja12" style="fill:url(#E);stroke:none;stroke-width:1.56044;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="33.5" cy="-154.1" r="5"/>
+    <circle class="burbuja13" style="fill:url(#F);stroke:none;stroke-width:3.12088;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="24.2" cy="-203.1" r="10"/>
+    <circle class="burbuja14" style="fill:url(#G);stroke:none;stroke-width:3.90108;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="34" cy="-231.4" r="12.5"/>
+    <circle class="burbuja15" style="fill:url(#H);stroke:none;stroke-width:2.34067;stroke-linecap:round;stroke-dasharray:none;paint-order:markers stroke fill" cx="26.8" cy="-174" r="7.5"/>
+  </g>
+  <text
+     xml:space="preserve" class="theBichoWiki"
+     style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:44.681px;line-height:1.25;font-family:'Henny Penny';-inkscape-font-specification:'Henny Penny';letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:1.11703"
+     x="351.99716"
+     y="158.41608"
+     id="theBichoWiki"><tspan
+       sodipodi:role="line"
+       id="tspan47"
+       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-family:'Henny Penny';-inkscape-font-specification:'Henny Penny';stroke-width:1.11703"
+       x="351.99716"
+       y="158.41608">The BichoWiki</tspan></text>
+</svg>
+
+
+
+ </header>
+
