--- a/public/css/estilomates.css
+++ b/public/css/estilomates.css
@@ -76,11 +76,10 @@ font-size: 0.5rem;
     padding: 1rem;
     font-size: 1.7rem;
     font-family: 'Aclonica', sans-serif, Arial, Helvetica, sans-serif;
-    color: black;
+    color: rgb(182, 21, 21);
     margin: 2rem;
     width: 20%;
     background-color: rgb(255, 102, 0);
-  
     border-radius: 1rem;
 
 }
