--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,41 +1,222 @@
 *{
     padding: 0.2rem;
     text-decoration: none; 
-    
+   
 }
 
 .header{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
     padding: 1rem;
-    
-}
-
-.labichopedia{
-    
-    color: rgb(0, 0, 0);
-    padding: 9rem;
-    display: flex;
-    justify-content: center;
-    font-weight: 900;
-    background-color: rgb(255, 255, 255);
-  background-image:url(../assets/svg/bg.titulo.svg) ;
-    background-size: 85rem;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin: 0rem;
+    position: relative;
     width: 100%;
-    font-family: 'Aclonica', sans-serif, Arial, Helvetica, sans-serif;
-    font-size: 3.5rem;
 }
 
-@media screen and (max-width:900px){
-    .labichopedia{
-        
-       background-image: url(../assets/svg/bg.titulo.chico.svg);
-       background-repeat: no-repeat;
-       font-size: 2.3rem;
-    }
+.theBichoWiki{
+    animation: letras 1s ease-out 1s ;
+    width: 100%;
+    top: 0;
+    left: 0; 
+    transform-origin: center;
+    transform-style: inherit;
+    text-shadow: 0 0 20px rgb(255, 255, 255);
+ }
+
+ @keyframes letras {
+     50%{opacity: 50%;transform: scale(1.5,1.5)}
+ }
+
+.cuadrowiki {
+    animation: cuadrowiki 2s ease-in 1s;
+    transform-origin: center;
+} 
+
+@keyframes cuadrowiki {
+    50%{opacity: 50% ; transform: scale(1.5,1.5)} 
 }
+
+.grupo1{
+    animation: grupo1 1s ease-out 0s  ;   
+    transition-timing-function: ease-out;
+}
+@keyframes grupo1 {from{};}
+
+.burbuja1{
+    animation: burbuja1 2s ease-out 3s ;   
+}
+@keyframes burbuja1 {
+   25%{transform: translate(200px,500px);} 
+   50%{transform: translate(800px,200px);}   
+}
+.burbuja2{
+    animation: burbuja2 2s ease-out 3s ;
+}
+@keyframes burbuja2 { 
+    25%{transform: translate(-200px,-200px);}
+    50%{transform: translate(-100px,-100px)  ;}
+}   
+.burbuja3{
+    animation: burbuja3 2s ease-out 3s ;
+}
+@keyframes burbuja3 { 
+    25%{transform: translate(-600px,-200px);}
+    50%{transform: translate(-100px,500px)  ;}
+}    
+.burbuja4{
+    animation: burbuja4 2s ease-out 3s ;
+}
+@keyframes burbuja4 { 
+    25%{transform: translate(200px,-200px);}
+    50%{transform: translate(600px,-100px)  ;}
+}    
+
+.grupo2{
+    animation: grupo2 1s ease-out 0s  ;   
+    transition-timing-function: ease-out;
+}
+@keyframes grupo2 { from{};}
+
+.burbuja5{
+    animation: burbuja5 2s ease-out 3s ;   
+}
+@keyframes burbuja5 {
+   25%{transform: translate(-200px,-500px);} 
+   50%{transform: translate(800px,700px);}   
+   }
+.burbuja6{
+    animation: burbuja6 2s ease-out 3s ;
+}
+@keyframes burbuja6 { 
+    25%{transform: translate(-200px,-400px);}
+    50%{transform: translate(-600px,-100px)  ;}
+}   
+.burbuja7{
+    animation: burbuja7 2s ease-out 3s ;
+}
+@keyframes burbuja7 { 
+    25%{transform: translate(-700px,-100px);}
+    50%{transform: translate(-400px,200px)  ;}
+}    
+.burbuja8{
+    animation: burbuja8 2s ease-out 3s ;
+}
+@keyframes burbuja8 { 
+    25%{transform: translate(500px,-600px);}
+    50%{transform: translate(300px,-800px)  ;}
+}    
+
+.grupo3{
+    animation: grupo3 1s ease-out 0s  ;   
+    transition-timing-function: ease-out;
+}
+@keyframes grupo3 {from{};}
+.burbuja9{
+    animation: burbuja9 2s ease-out 3.1s ;   
+}
+@keyframes burbuja9 {
+   50%{transform: translate(0,900px);}   
+}
+.burbuja10{
+    animation: burbuja10 2s ease-out 3s ;
+}
+@keyframes burbuja10 { 
+    50%{transform: translate(0,1000px)  ;}
+}   
+.burbuja11{
+    animation: burbuja11 2s ease-out 3.6s ;
+}
+@keyframes burbuja11 { 
+    50%{transform: translate(0,400px)  ;}
+}    
+.burbuja12{
+    animation: burbuja12 2s ease-out 3.5s ;
+}
+@keyframes burbuja12 {  
+    50%{transform: translate(0,500px)  ;}
+}
+.burbuja13{
+    animation: burbuja13 2s ease-out 3.3s ;
+}
+@keyframes burbuja13 {  
+    50%{transform: translate(0,700px)  ;}
+}
+.burbuja14{
+    animation: burbuja14 2s ease-out 3.2s ;
+}
+@keyframes burbuja14 {   
+    50%{transform: translate(0,800px)  ;}
+}
+.burbuja15{
+    animation: burbuja15 2s ease-out 3.4s ;
+}
+@keyframes burbuja15 { 
+    50%{transform: translate(0,600px)  ;}
+}
+
+.grupo4 {
+    animation: grupo4 1s ease-out 0s alternate ;   
+    transition-timing-function: ease-out;
+}
+
+.texto1 {
+    display: block;
+    width: 50%;
+    background-color: rgb(64, 0, 255);
+    margin-inline: auto;
+}
+
+.texto1:hover{
+    text-shadow: 0 0 20px rgb(255, 108, 0);
+}
+
+.texto11 {
+    display: flex;
+    background-image: url(../assets/svg/bgtexto1.svg);
+    background-size: 100%vw;
+    background-repeat: no-repeat;
+    margin-inline: auto;
+    justify-content: center;
+    font-family:  'Aclonica', sans-serif, Arial, Helvetica, sans-serif ;
+    padding: 3rem;
+}
+
+.texto11:hover{
+    text-shadow: 0 0 20px rgb(255, 108, 0);
+}
+
+.welcome {
+animation: rectangulo1 0.3s ease-out forwards;
+transform-origin:center ;
+opacity: 0;
+background-color: blueviolet;
+transform: scale(18,18)
+}
+
+@keyframes rectangulo1 {
+    100% {transform: scale(1,1); opacity: 1;}
+}
+
+.delay1 {
+    animation-delay: 1.1s;
+}
+.delay2 {
+    animation-delay: 1.2s;
+}
+.delay3 {
+    animation-delay: 1.3s;
+}
+.delay4 {
+    animation-delay: 1.4s;
+}
+.delay5 {
+    animation-delay: 2s;
+    /* text-shadow: 0 0 20px rgb(255, 106, 0); */
+}
+
+.letras {
+    font-weight: bolder;
+}
+
+
 
 .form-control.me-2 {
     width: 40rem;
@@ -48,22 +229,23 @@
 
 .btn.btn-outline-secondary {
     color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
+    background: rgb(0, 0, 0) ;
     font-family:  'Aclonica', sans-serif, Arial, Helvetica, sans-serif ;
 }
 
 .btn.btn-outline-secondary:hover {
     color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
+    background: rgb(255, 255, 255) ;
     font-weight: 700;
+    border-style: none;
 }
 
 .btn.btn-secondary {
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     font-family: 'Aclonica', sans-serif, Arial, Helvetica, sans-serif;
-    
 }
+
 .btn.btn.btn-secondary:hover {
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
@@ -93,8 +275,9 @@
     display: flex;
     justify-content: center;
     font-family: 'Aclonica', sans-serif;
-    padding: 4rem;
-    background-image: url(../assets/svg/bg.texto2.svg);
+    width: 100%;
+    padding: 1rem;
+    /* background-image: url(../assets/svg/bg.texto2.svg); */
     background-repeat: no-repeat;
 }
 
@@ -104,25 +287,10 @@
     }
 }
 
-.texto {
-    margin: 1rem; 
-    margin-left: 20rem;
-    margin-right: 15rem;
-    border: 1rem;
-    line-height: 3rem; 
-    font-size: 1.5rem;
-    background-image: url(../assets/svg/bg.texto.svg);
-    
-    
-}
+
 .container { 
-    padding: 3rem;
-    width: 30rem;
-    height: 7rem;
-    margin-left: 3.2rem;
-    font-size: 2rem;
-    background-image: url(../assets/svg/bcmaterias.svg);
-    background-repeat: no-repeat;
+    padding: 1rem;
+    text-align: left;
     font-family:  'Aclonica', sans-serif, Arial, Helvetica, sans-serif ;
 
 }
@@ -169,9 +337,7 @@
     justify-content: center;
     padding: 3rem;
     font-size: 1.5rem;
-    background-image: url(../assets/svg/naranja.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+    background: url(../assets/svg/naranja.svg) no-repeat center;
     display: flex;
     justify-content: center;
     font-family: 'Aclonica', sans-serif, Arial, Helvetica, sans-serif;
@@ -196,7 +362,9 @@
 
 
 .footer {
-    background-image: url(../assets/svg/bgFooter.svg);
+    background-image: url(../assets/svg/wave.svg);
+    background-size: 100%;
+    background-position: bottom;
     background-repeat: no-repeat;
     padding: 2rem;
     color: rgb(0, 0, 0);
@@ -213,10 +381,15 @@
     font-weight: 600;
     width: 20rem;
     padding: 1rem;
+    transition: width 2s;
 }
 
 .btn.btn-dark:hover {
 color: rgb(0, 0, 0);
+width: 25rem;
+
 background-color: rgb(255, 255, 255);
 font-weight: 600;
+border-style: none;
+
 }
